+ Notify player when ability can be upgraded to next level

* Added particle effects for fireball
* Added a model for wave
* Added Purify
* Added Cleanse
* Added Restore
* Added Slipstream
* Added Earthspike
* Added Cloudburst
* Added Fire Jump
* Added Water Cannon
* Fixed some bugs
* Server sends MUCH less packets to clients, reducing lag (hopefully)
* Fix potential exploits with floating block pickup location, light fire location, etc
* When a player dies, their chi is fully regenerated
* Changed wave Lvl IV first path upgrade to Explosion
* Right clicking on ability in radial menu shows upgrade area
* Using locked ability in creative mode no longer displays "Creative Mode" as ability name
* Make flying bison 3x faster
* Add option to allow multiple airbending walljumps

> Fix sky bison landing zone detection false negatives
> Fix sky bison getting "stuck" when it can't find a place to land
> Fix case sensitive tab completion in /avatar command
> Fix airjump XP added is the amount of chi, not the actual value specified in skills.yml
> Fix crash caused by mapping "Use Bending" control to mouse button - still doesn't work though